# UAIssistant

./: .dockerignore  .editorconfig  .env.examle  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  scheme.key
.github/workflows/: python-app.yml
postgres/: init.sql
readmedia/: scheme.key
sql_scripts/: assistant.sql  iris_dataset.sql  message.sql  thread.sql
tests/: gemini_test.py  modeling.py
uaissistant/: main.py
uaissistant/assistant/: __init__.py  models.py  module.py  repository.py  schemas.py  service.py
uaissistant/connections/: __init__.py
uaissistant/connections/anthropicx/: __init__.py
uaissistant/connections/configx/: __init__.py
uaissistant/connections/dbx/: __init__.py
uaissistant/connections/openaix/: __init__.py
uaissistant/llms/: README.md  __init__.py  llm.py  module.py
uaissistant/llms/anthropic/: anthropicllm.py  module.py  repository.py
uaissistant/llms/gemini/: geminillm.py  module.py  repository.py
uaissistant/llms/openai/: openaillm.py
uaissistant/routes/: assistant.py
uaissistant/tool_factory/: README.md  __init__.py  module.py  repository.py  service.py
uaissistant/tool_factory/schemas/: tool_function.py
uaissistant/tool_factory/tools/: __init__.py  forbidden.py  general.py
uaissistant/tool_factory/tools/data_analysis/: __init__.py  data_analyser.py  datasets.py  modeling.py  plot.py  statistics.py
