[tool.poetry]
name = "uaissistant"
version = "1.0.0"
description = ""
authors = ["Ukhatov Alexander <alexander.ukhatov@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
environs = "^11.0.0"
injector = "^0.21.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
fastapi-injector = "^0.5.4"
openai = "^1.14.3"
anthropic = "0.23.1"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
pandas = "^2.2.1"
plotly = "^5.20.0"
psycopg2 = "^2.9.9"
google-generativeai = "^0.5.0"
ipython = "^8.23.0"
scikit-learn = "^1.4.2"
shap = "^0.45.0"
matplotlib = "^3.8.4"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80
